--- a/app/src/main/res/values/strings_untranslatable.xml
+++ b/app/src/main/res/values/strings_untranslatable.xml
@@ -13,7 +13,9 @@
     <string name="s" translatable="false">S</string>
     <string name="v" translatable="false">V</string>
     <string name="rgb_" translatable="false">RGB: %1$s, %2$s, %3$s</string>
+    <string name="rgb_clipboard" translatable="false">rgb(%1$s, %2$s, %3$s)</string>
     <string name="hex_" translatable="false">HEX: %s</string>
     <string name="hsv_" translatable="false">HSV: %1$s, %2$s, %3$s</string>
+    <string name="hsv_clipboard" translatable="false">hsl(%1$s, %2$s, %3$s)</string>
     <string name="color_summary" translatable="false">RGB: %1$s, %2$s, %3$s • HEX: %4$s • HSV: %5$s, %6$s, %7$s</string>
 </resources>
