--- a/app/src/main/res/layout/dialog_color_rename.xml
+++ b/app/src/main/res/layout/dialog_color_rename.xml
@@ -9,7 +9,7 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/dialog_name"
+        android:id="@+id/dialogName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
