--- a/app/src/main/res/layout/dialog_edit_hex.xml
+++ b/app/src/main/res/layout/dialog_edit_hex.xml
@@ -9,7 +9,7 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/dialog_hex"
+        android:id="@+id/dialogHex"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
