Fix visual bug in ColorSelectionActivity

--- a/app/src/main/res/values-de/strings_colors.xml
+++ b/app/src/main/res/values-de/strings_colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  ~ Copyright © Marc Auberer 2020. All rights reserved
+  -->
+
+<!--
  Loco xml export: Android string resources
  Project: Color Converter Colors
  Release: Working copy
  Locale: de, German
  Exported by: ChilliBits
- Exported at: Mon, 06 Apr 2020 23:35:31 +0100
+ Exported at: Tue, 07 Apr 2020 10:46:28 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="color_alice_blue">Aliceblau</string>
