--- a/app/src/main/res/layout/activity_color_selection.xml
+++ b/app/src/main/res/layout/activity_color_selection.xml
@@ -12,13 +12,21 @@
     android:layout_height="match_parent"
     tools:context="com.chillibits.colorconverter.ui.activity.ColorSelectionActivity">
 
-    <include layout="@layout/toolbar" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/transparent"
+        android:theme="@style/toolbarStyle"
+        android:elevation="1dp"
+        tools:targetApi="lollipop" />
 
     <View
         android:id="@+id/revealBackground"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         android:fitsSystemWindows="false"
         android:background="@color/colorPrimary"/>
@@ -27,7 +35,7 @@
         android:id="@+id/reveal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         android:fitsSystemWindows="false"
         android:background="@color/colorPrimary"/>
