--- a/app/src/main/res/drawable-v21/button_outline.xml
+++ b/app/src/main/res/drawable-v21/button_outline.xml
@@ -3,10 +3,10 @@
   ~ Copyright © Marc Auberer 2020. All rights reserved
   -->
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/button_color_transparent">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/buttonColorTransparent">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/button_color_transparent" />
+            <solid android:color="@color/buttonColorTransparent" />
             <corners android:radius="3dp" />
         </shape>
     </item>
@@ -22,7 +22,7 @@
             <item>
                 <shape>
                     <corners android:radius="3dp" />
-                    <stroke android:color="@color/button_color" android:width="1.5dp" />
+                    <stroke android:color="@color/buttonColor" android:width="1.5dp" />
                 </shape>
             </item>
         </selector>
