--- a/app/src/main/res/drawable/button_outline_rounded.xml
+++ b/app/src/main/res/drawable/button_outline_rounded.xml
@@ -7,7 +7,7 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <corners android:radius="150dp" />
-            <stroke android:color="@color/gray_light" android:width="1.5dp" />
+            <stroke android:color="@color/grayLight" android:width="1.5dp" />
         </shape>
     </item>
     <item android:state_pressed="true">
