--- a/app/src/main/res/drawable/button_outline_text.xml
+++ b/app/src/main/res/drawable/button_outline_text.xml
@@ -5,5 +5,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:color="@color/disabled" />
-    <item android:color="@color/button_color" />
+    <item android:color="@color/buttonColor" />
 </selector>
