--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,10 +8,10 @@
     <color name="colorPrimary">#272727</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorPrimaryTransparent">#80141414</color>
-    <color name="window_background_color">#303030</color>
+    <color name="windowBackgroundColor">#303030</color>
 
     <!-- Button colors -->
     <color name="disabled">@color/colorPrimaryTransparent</color>
-    <color name="button_color">#BBBBBB</color>
-    <color name="button_color_transparent">#80BBBBBB</color>
+    <color name="buttonColor">#BBBBBB</color>
+    <color name="buttonColorTransparent">#80BBBBBB</color>
 </resources>
